src/main/java/semantic/symbolTable/test/failing/undefinedImpl.ru
/? UndefinedImplException
struct A {}
start {}

/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 8 | No se definió una implementación para: A |